<resources>
    <string name="app_name">Currency Converter BDT</string>
    <string name="euro">Euro</string>
    <string name="us_dollar">US Dollar</string>
    <string name="australian_dollar">Australian Dollar</string>
    <string name="canadian_dollar">Canadian Dollar</string>
    <string name="singapore_dollar">Singapore Dollar</string>
    <string name="british_pound">British Pound</string>
    <string name="egyptian_pound">Egyptian Pound</string>
    <string name="uae_dirham">UAE Dirham</string>
    <string name="qatari_rial">Qatari Riyal</string>
    <string name="saudi_rial">Saudi Riyal</string>
    <string name="omani_rial">Omani Riyal</string>
    <string name="bahraini_dinar">Bahraini Dinar</string>
    <string name="kuwaiti_dinar">Kuwaiti Dinar</string>
    <string name="indian_rupee">Indian Rupee</string>
    <string name="pakistan_rupee">Pakistan Rupee</string>
    <string name="srilankan_rupee">Sri Lankan Rupee</string>
    <string name="nepalese_rupee">Nepalese Rupee</string>
    <string name="myanmar_kyat">Myanmar Kyat</string>
    <string name="japanese_yen">Japanese Yen</string>
    <string name="thailand_baht">Thailand Baht</string>
    <string name="convert_btn">Convert</string>
    <string name="clear_btn">Clear</string>


</resources>